--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -3,8 +3,8 @@
 
 <div class="nav-container">
   <div>
-    <a class="logo" href="{% url 'home:home' %}">
-      <img src=" {% static 'home/svg/linkedin-cust.svg' %} " alt="logo">
+    <a class="logo logo2" href="{% url 'home:home' %}">
+      <img src=" {% static 'home/svg/m.svg' %} " alt="logo">
     </a>
   </div>
 
