--- a/static/home/sass/pages/_home.sass
+++ b/static/home/sass/pages/_home.sass
@@ -44,6 +44,9 @@ main.main-home
 @media screen and (max-width:780px)
   img#container1-img
     width: 100%
+  .container1
+    flex-direction: column
+    align-items: center
 @media screen and (max-width:740px)
   .container1
     flex-direction: column
