--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon">
+<link rel="shortcut icon" href=" {% static 'home/svg/m.svg' %} " type="image/x-icon">
 <link rel="stylesheet" href=" {% static 'components/css/style.css' %}" />
 <link rel="stylesheet" href=" {% static 'home/css/style.css' %} " />
 {% endblock style %}
