--- a/templates/users/password_reset_done.html
+++ b/templates/users/password_reset_done.html
@@ -3,7 +3,7 @@
 
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon">
+<link rel="shortcut icon" href=" {% static 'home/svg/m' %} " type="image/x-icon">
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 {% endblock style %}
 
