fix: heroku deploy test

--- a/static/components/sass/utils/_settings.sass
+++ b/static/components/sass/utils/_settings.sass
@@ -13,8 +13,7 @@ $font4: 'Inconsolata', monospace
 // $color6: #2ebab8
 $color1: #2c3e50
 $color2: #f1f1f1
-// $color3: #1abc9c
-$color3: #96860d
+$color3: #1abc9c
 $color4: #34495e
 $color5: #3238373f
 $color6: #0000001a
