--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -6,7 +6,7 @@
 {% block title %} Messagerie {% endblock title %}
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/m.svg' %} " type="image/x-icon" />
+<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon" />
 <link rel="stylesheet" href=" {% static 'components/css/style.css' %}" />
 <!-- <link rel="stylesheet" href=" {% static 'post/css/style.css' %}" /> -->
 <link rel="stylesheet" href=" {% static 'chat/css/style.css' %}" />
