--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -4,7 +4,7 @@
 <div class="nav-container">
   <div>
     <a class="logo logo2" href="{% url 'home:home' %}">
-      <img src=" {% static 'home/svg/m.svg' %} " alt="logo">
+      <img src=" {% static 'home/svg/linkedin-cust.svg' %} " alt="logo">
     </a>
   </div>
 
