--- a/templates/post/components/left.html
+++ b/templates/post/components/left.html
@@ -32,7 +32,7 @@
 
   <div class="post-left-statistic-profile">
     <div class="post-left-num-vue statistic">
-      <span class="post-left-statistic-text">Vues de votre profile</span>
+      <span class="post-left-statistic-text">Vues de votre profil</span>
       <span class="post-left-statistic-num">
         {% if request.user.profile.number_views %}
         {{request.user.profile.number_views}}
