--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -7,7 +7,7 @@
 {% block title %} {% if page == 'notif' %} Notifications {% else %} Fil d'actualité {% endif %} {% endblock title %}
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/m.svg' %} " type="image/x-icon" />
+<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon" />
 <link rel="stylesheet" href=" {% static 'components/css/style.css' %}" />
 {% if page != 'notif' %}
 <link rel="stylesheet" href=" {% static 'comments/css/style.css' %} " />
