--- a/templates/profiles/profiles.html
+++ b/templates/profiles/profiles.html
@@ -9,7 +9,7 @@
 
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/m.svg' %} " type="image/x-icon">
+<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon">
 <link rel="stylesheet" href=" {% static 'components/css/style.css' %}" />
 <link rel="stylesheet" href=" {% static 'profiles/css/style.css' %} " />
 {% endblock style %}
