--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 
 
 {% block style %}
-<link rel="shortcut icon" href=" {% static 'home/svg/m.svg' %} " type="image/x-icon">
+<link rel="shortcut icon" href=" {% static 'home/svg/linkedin-cust.svg' %} " type="image/x-icon">
 <link rel="stylesheet" href=" {% static 'components/css/style.css' %}" />
 <link rel="stylesheet" href=" {% static 'home/css/style.css' %} " />
 {% endblock style %}
@@ -19,7 +19,7 @@
   <div class="container1">
     <img id="container1-img" src="{% static 'home/svg/img-home.svg' %}">
     <div class="content">
-      <h1>Bienvenue dans votre réseau social professionnelle</h1>
+      <h1>Bienvenue dans votre réseau social professionnel</h1>
       <h3>Veuillez vous connecter si vous avez déjà un compte ou vous s'inscrire si vous n'avez pas de compte.</h3>
     </div>
   </div>
@@ -34,7 +34,7 @@
     <div class="box box2">
       <img src="{% static 'home/svg/img-home3.svg' %}">
       <h4>
-        Booster et enrichir votre profile
+        Booster et enrichir votre profil
       </h4>
     </div>
   </div>
