--- a/static/post/css/style.css
+++ b/static/post/css/style.css
@@ -156,14 +156,15 @@ form .input-text {
 }
 form .input-text textarea {
   width: 100%;
+  height: 70px;
   resize: none;
-  resize: vertical;
   outline: none;
   border: none;
   padding: 8px;
   border-radius: 8px;
   font-family: ui-sans-serif, system-ui;
-  font-size: 16px;
+  font-size: 18px;
+  line-height: 22px;
   background-color: #34495e;
   border: 1px solid #979eaa;
   color: #f1f1f1;
@@ -174,6 +175,18 @@ form .input-text textarea::-webkit-input-placeholder {
 }
 form .input-text textarea:focus {
   border: 1px solid #f1f1f1;
+}
+form .input-text textarea::-webkit-scrollbar {
+  width: 0px;
+  border-radius: 10px;
+}
+form .input-text textarea::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+form .input-text textarea::-webkit-scrollbar-thumb {
+  background: #979eaa;
+  border-radius: 10px;
 }
 form .add-img-btn-send {
   width: 100%;
@@ -296,6 +309,8 @@ form .add-img-btn-send button span {
 .previous-post-container .previous-post-text-content p {
   line-height: 130%;
   overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: pre-wrap;
 }
 
 .previous-post-img {
