--- a/static/post/sass/pages/_add_post.sass
+++ b/static/post/sass/pages/_add_post.sass
@@ -37,14 +37,16 @@ form
     width: 100%
     textarea
       width: 100%
+      height: 70px
       resize: none
-      resize: vertical
+      // resize: vertical
       outline: none
       border: none
       padding: 8px
       border-radius: 8px
       font-family: $font1
-      font-size: 16px
+      font-size: 18px
+      line-height: 22px
       background-color: $color4
       border: 1px solid $color7
       color: $color2
@@ -53,6 +55,15 @@ form
         color: $color7
       &:focus
         border: 1px solid $color2
+      &::-webkit-scrollbar
+        width: 0px
+        border-radius: 10px
+      &::-webkit-scrollbar-track 
+        background: transparent
+        border-radius: 10px
+      &::-webkit-scrollbar-thumb
+        background: $color7
+        border-radius: 10px
   .add-img-btn-send
     width: 100%
     @include flex-el(center, center)
@@ -159,6 +170,8 @@ form
     p
       line-height: 130%
       overflow-wrap: break-word
+      word-break: break-word
+      white-space: pre-wrap
 
 .previous-post-img
   display: none
