--- a/templates/home/components/navbar-home.html
+++ b/templates/home/components/navbar-home.html
@@ -3,7 +3,7 @@
 <div class="nav-container">
   <div>
     <a class="logo logo1" href="{% url 'home:home' %}" style="color: #1abc9c">
-      <img src=" {% static 'home/svg/mackdin.svg' %} " alt="logo">
+      Mack<img src=" {% static 'home/svg/linkedin-cust.svg' %} " alt="logo">
     </a>
   </div>
   <div>
