--- a/static/components/sass/components/_navigation2.sass
+++ b/static/components/sass/components/_navigation2.sass
@@ -19,12 +19,12 @@ a.logo
   transition: 0.4s
   vertical-align: middle
   @extend .flex-center
-  font-size: 30px
+  font-size: 35px
   font-weight: 650
   img
     margin-left: 3px
 a.logo1 img
-  width: 130px
+  width: 35px
 a.logo2 img
   width: 35px
 
@@ -203,7 +203,7 @@ nav ul a:hover
     margin-right: 5px
 @media screen and (max-width:530px)
   .nav-menu
-    // gap: 15px
+    gap: 10px
     .nav-item
       line-height: 70px
       .nav-img
@@ -213,14 +213,14 @@ nav ul a:hover
           font-size: 14px
 @media screen and (max-width:480px)
   .nav-menu
-    gap: 25px
+    // gap: 25px
 
     .nav-item
       .nav-img
-        width: 35px
+        width: 30px
       .nav-text
         .nav-text-span
-          display: none
+          font-size: 13px
   a.nav-nofit
     span#nav-nofit-alert,
     span#nav-nofit-alert-chat
@@ -229,14 +229,16 @@ nav ul a:hover
       @include position-abs(34%, null, null, 55%, -50%, -50%)
 @media screen and (max-width:415px)
   .nav-menu
-    gap: 15px
+    // gap: 15px
 @media screen and (max-width:365px)
   a.logo1 img
-    width: 80px
+    width: 25px
+  a.logo1
+    font-size: 30px
   a.logo2 img
     width: 35px
   .nav-menu
-    gap: 10px
+    // gap: 10px
   .nav-profil
     .nav-box-profil
       width: 40px
@@ -266,9 +268,9 @@ nav ul a:hover
     width: 30px
   .nav-menu
     gap: 4px
-    .nav-item
-      .nav-img
-        width: 30px
+    // .nav-item
+      // .nav-img
+      //   width: 30px
   .nav-profil
     .nav-box-profil
       width: 30px
