--- a/static/components/sass/components/_navigation2.sass
+++ b/static/components/sass/components/_navigation2.sass
@@ -203,7 +203,7 @@ nav ul a:hover
     margin-right: 5px
 @media screen and (max-width:530px)
   .nav-menu
-    gap: 10px
+    gap: 5px
     .nav-item
       line-height: 70px
       .nav-img
@@ -213,14 +213,14 @@ nav ul a:hover
           font-size: 14px
 @media screen and (max-width:480px)
   .nav-menu
-    // gap: 25px
+    gap: 20px
 
     .nav-item
       .nav-img
         width: 30px
       .nav-text
         .nav-text-span
-          font-size: 13px
+          display: none
   a.nav-nofit
     span#nav-nofit-alert,
     span#nav-nofit-alert-chat
@@ -229,7 +229,7 @@ nav ul a:hover
       @include position-abs(34%, null, null, 55%, -50%, -50%)
 @media screen and (max-width:415px)
   .nav-menu
-    // gap: 15px
+    gap: 15px
 @media screen and (max-width:365px)
   a.logo1 img
     width: 25px
