--- a/templates/friends/components/nav-statistic.html
+++ b/templates/friends/components/nav-statistic.html
@@ -6,15 +6,19 @@
 
 <div class="container-nav-statistics">
     <!-- Plus de suggestions pour vous -->
-    <a class="nav-link-statistc" href="{% url 'friends:my_friends' %}">
+    <a class="nav-link-statistc {% if page == 'list_not_friends' %}nav-link-statistc-active{% endif %}" href="{% url 'friends:my_network' %}">
+        <span class="text">Réseau</span>
+        <span class="num"></span>
+    </a>
+    <a class="nav-link-statistc {% if page == 'my_friends' %}nav-link-statistc-active{% endif %}" href="{% url 'friends:my_friends' %}">
         <span class="text">Relations</span>
         <span class="num">{{num_friends}}</span>
     </a>
-    <a class="nav-link-statistc" href="{% url 'friends:invitation_received' %}">
+    <a class="nav-link-statistc {% if page == 'invitation_received' %}nav-link-statistc-active{% endif %}" href="{% url 'friends:invitation_received' %}">
         <span class="text">Invitation reçu</span>
         <span class="num">{{num_invitation_received}}</span>
     </a>
-    <a class="nav-link-statistc" href="{% url 'friends:invitation_send' %}">
+    <a class="nav-link-statistc {% if page == 'invitation_send' %}nav-link-statistc-active{% endif %}" href="{% url 'friends:invitation_send' %}">
         <span class="text">Invitation envoyer</span>
         <span class="num">{{num_invitation_send}}</span>
     </a>
