--- a/templates/home/components/footer.html
+++ b/templates/home/components/footer.html
@@ -23,7 +23,7 @@
   </div>
   <!-- <hr>    -->
   <div class="footer-bottom">
-    <p>Mackd<img src=" {% static 'home/svg/linkedin.svg' %} "> &copy;2022 Macktireh AS | <a href="">Mentions
+    <p>Mackd<img src=" {% static 'home/svg/linkedin.svg' %} "> &copy;{% now 'Y' %} Macktireh AS | <a href="">Mentions
         légales</a></p>
   </div>
 </footer>
