--- a/templates/chat/components/list_chatroom.html
+++ b/templates/chat/components/list_chatroom.html
@@ -8,11 +8,17 @@
   <div class="my-friends-info-container">
     <div class="my-friends-info">
       <div id="link-profile-user">
-        <img src="{% if obj.profile.img_profile %}
+        <img src="
+        {% if obj.profile.is_fixture %}
+        {{obj.profile.img_profile_str}}
+        {% else %}
+        {% if obj.profile.img_profile %}
           {{obj.profile.img_profile.url}}
         {% else %}
           {% static 'home/img/default-img-profile.jpg' %}
-        {% endif %}" class="my-friends-img-profile">
+        {% endif %}
+        {% endif %}
+        " class="my-friends-img-profile">
 
         {% if obj.last_logout %}
         <span id="point-connexion-color" class="{% if obj.last_logout > obj.last_login %}
