--- a/templates/post/components/post-detail.html
+++ b/templates/post/components/post-detail.html
@@ -10,11 +10,16 @@
     <a href="{% url 'profiles:profile' pseudo=post.author.profile.pseudo  %}">
       <div class="post-header-img">
         <img src="        
-            {% if post.author.profile.img_profile %}
-            {{ post.author.profile.img_profile.url }}
+            {% if post.author.profile.is_fixture %}
+              {{ post.author.profile.img_profile_str }}
             {% else %}
-            {% static 'home/img/default-img-profile.jpg' %}
-            {% endif %}" />
+              {% if post.author.profile.img_profile %}
+                {{ post.author.profile.img_profile.url }}
+              {% else %}
+                {% static 'home/img/default-img-profile.jpg' %}
+              {% endif %}
+            {% endif %}
+          " />
       </div>
     </a>
     <div class="post-header-info">
@@ -55,9 +60,11 @@
 
   <div class="root-comments" data-post-id="{{ post.id }}"
     data-class-toggle-post-detail="{% if page != 'detail' %}1{% else %}0{% endif %}"
-    data-url-add-update-comment="{% url 'comments:add-update-comment' %}" data-csrf-token="{{ csrf_token }}"
-    data-img-profile="{% if user.profile.img_profile %}{{ user.profile.img_profile.url }}{% else %}{% static 'home/img/default-img-profile.jpg' %}{% endif %}"
-    data-url-get-data="{% url 'comments:get-comment-post' post_id=post.id %}" data-nber-like="{{post.number_of_like}}"
+    data-url-add-update-comment="{% url 'comments:add-update-comment' %}" 
+    data-csrf-token="{{ csrf_token }}"
+    data-img-profile="{% if user.profile.is_fixture %}{{ user.profile.img_profile_str }}{% else %}{% if user.profile.img_profile %}{{ user.profile.img_profile.url }}{% else %}{% static 'home/img/default-img-profile.jpg' %}{% endif %}{% endif %}"
+    data-url-get-data="{% url 'comments:get-comment-post' post_id=post.id %}" 
+    data-nber-like="{{post.number_of_like}}"
     data-nber-comment="{{post.post_comment.count}}"
     data-is-like="{% if user not in post.liked.all %}0{% else %}1{% endif %}">
   </div>
