implementation of infinite scrolling and pagination with lists of posts and profiles

--- a/templates/friends/components/nav-statistic.html
+++ b/templates/friends/components/nav-statistic.html
@@ -29,7 +29,7 @@
     <a class="nav-link-statistc">
         <span class="text">Pages</span>
     </a>
-    <a class="nav-link-statistc">
+    <!-- <a class="nav-link-statistc">
         <span class="text">Newsletter</span>
-    </a>
+    </a> -->
 </div>
