--- a/templates/post/components/block-js.html
+++ b/templates/post/components/block-js.html
@@ -9,8 +9,10 @@
 <script type="text/javascript" src=" {% static 'post/js/api-news.js' %} "></script>
 
 <!-- react js -->
+{% comment %}
 <!-- <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script> -->
+{% endcomment %}
 <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
 
@@ -60,5 +62,7 @@
       close_p_img.setAttribute("src", "");
     })
   } catch (error) { }
+
+  paginatorWithAjax("", ".container-main", "{{ csrf_token }}", -100, true);
 </script>
 {% endif %}
