--- a/static/friends/sass/components/_nav-statistic.sass
+++ b/static/friends/sass/components/_nav-statistic.sass
@@ -17,6 +17,13 @@ main.my-network
         transition: .3s ease-out
         &:hover
           background-color: $color6
+      
+      a.nav-link-statistc-active
+        background-color: $color6
+        border-left-color: $color3
+        border-left-style: solid
+        border-left-width: 4px
+        padding-left: 0.7rem
 
         span.text
           &:hover
