--- a/templates/friends/mynetwork.html
+++ b/templates/friends/mynetwork.html
@@ -58,7 +58,7 @@
 
 {% block js %}
 <script type="text/javascript" src=" {% static 'components/js/index.js' %} "></script>
-<!-- <script type="text/javascript" src=" {% static 'notifications/js/notifications.js' %} "></script> -->
+<script type="text/javascript" src=" {% static 'notifications/js/notifications.js' %} "></script>
 
 {% if page == "list_not_friends" %}
 <script>
